# cuda-math

./: .gitignore  CMakeLists.txt  README.md
src/lib/: matrix.cu  matrix.h  vector.cu  vector.h
test/: cuda_env_test.cu  matrix_test.c
